tests/NormalTests/paczka1/fuzzy1/23341873.err
Error in line 3: iUhlEKgo3 A720 52,3
Error in line 9: A7|0 S|78 5,5
Error in line 5: X2gmLlQU S348 46,3
Error in line 4: OJYasJ0Wh S278 88,3
Error in line 13: A720 S278 12,6
